# api/api.yaml
@@ -131,145 +131,8 @@ paths:
         '400':
           description: Invalid request
 
-#  /pet/findByTags:
-#    get:
-#      tags:
-#        - pet
-#      summary: Finds Pets by tags
-#      description: >-
-#        Multiple tags can be provided with comma separated strings. Use tag1,
-#        tag2, tag3 for testing.
-#      operationId: findPetsByTags
-#      parameters:
-#        - name: tags
-#          in: query
-#          description: Tags to filter by
-#          required: true
-#          style: form
-#          explode: false
-#          schema:
-#            type: array
-#            items:
-#              type: string
-#      responses:
-#        '200':
-#          description: successful operation
-#          content:
-#            application/xml:
-#              schema:
-#                type: array
-#                items:
-#                  $ref: '#/components/schemas/Pet'
-#            application/json:
-#              schema:
-#                type: array
-#                items:
-#                  $ref: '#/components/schemas/Pet'
-#        '400':
-#          description: Invalid tag value
-#      security:
-#        - petstore_auth:
-#            - 'read:pets'
-#      deprecated: true
-#  '/pet/{petId}':
-#    get:
-#      tags:
-#        - pet
-#      summary: Find pet by ID
-#      description: Returns a single pet
-#      operationId: getPetById
-#      parameters:
-#        - name: petId
-#          in: path
-#          description: ID of pet to return
-#          required: true
-#          schema:
-#            type: integer
-#            format: int64
-#      responses:
-#        '200':
-#          description: successful operation
-#          content:
-#            application/xml:
-#              schema:
-#                $ref: '#/components/schemas/Pet'
-#            application/json:
-#              schema:
-#                $ref: '#/components/schemas/Pet'
-#        '400':
-#          description: Invalid ID supplied
-#        '404':
-#          description: Pet not found
-#      security:
-#        - api_key: []
-#    post:
-#      tags:
-#        - pet
-#      summary: Updates a pet in the store with form data
-#      description: ''
-#      operationId: updatePetWithForm
-#      parameters:
-#        - name: petId
-#          in: path
-#          description: ID of pet that needs to be updated
-#          required: true
-#          schema:
-#            type: integer
-#            format: int64
-#      responses:
-#        '405':
-#          description: Invalid input
-#      security:
-#        - petstore_auth:
-#            - 'write:pets'
-#            - 'read:pets'
-#      requestBody:
-#        content:
-#          application/x-www-form-urlencoded:
-#            schema:
-#              type: object
-#              properties:
-#                name:
-#                  description: Updated name of the pet
-#                  type: string
-#                status:
-#                  description: Updated status of the pet
-#                  type: string
 
 components:
-#  requestBodies:
-#    UserArray:
-#      content:
-#        application/json:
-#          schema:
-#            type: array
-#            items:
-#              $ref: '#/components/schemas/User'
-#      description: List of user object
-#      required: true
-#    Pet:
-#      content:
-#        application/json:
-#          schema:
-#            $ref: '#/components/schemas/Pet'
-#        application/xml:
-#          schema:
-#            $ref: '#/components/schemas/Pet'
-#      description: Pet object that needs to be added to the store
-#      required: true
-#  securitySchemes:
-#    petstore_auth:
-#      type: oauth2
-#      flows:
-#        implicit:
-#          authorizationUrl: 'http://petstore.swagger.io/api/oauth/dialog'
-#          scopes:
-#            'write:pets': modify pets in your account
-#            'read:pets': read your pets
-#    api_key:
-#      type: apiKey
-#      name: api_key
-#      in: header
   schemas:
     Chapter:
       title: Chapter
@@ -282,6 +145,16 @@ components:
         name:
           type: string
           description: Full chapter name
+        group:
+          type: string
+          description: Name of the chapter group
+        side:
+          type: string
+          description: Side of the Chapter
+          enum:
+            - A
+            - B
+            - C
         image:
           type: string
           description: Image representing the chapter
